# livotale

./: .env.example  .env.production.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml  index.html  jest.config.cjs  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.js  tsconfig.test.json  vite.config.ts
apps/api/: .env.example  README.md  main.py  package.json  pyproject.toml
apps/api/app/: __init__.py  cli.py  main.py
apps/api/app/api/: deps.py
apps/api/app/core/: config.py  database.py  deps.py  exceptions.py  field_encryption.py  integration_encryption.py  (+5 more)
apps/api/scripts/: apply_pending_migrations.py  bootstrap_constants.py  bootstrap_migration_ledger.py  demo-ids.js  manual_test_prescription_flow.sh  reset_database.py  run-migrations.js  seed-doctor-booking-data.js  seed_project_bootstrap.py  verify_p0_migrations.py  verify_scan_report_upload.py
apps/api/tests/: conftest.py  test_admin_integrations_api.py  test_ai_extraction_agents.py  test_app_mode_config.py  test_appointment_dashboard.py  test_audit_logging.py  test_auth.py  test_auth_roles.py  test_bank_details.py  test_consent.py  test_dashboard_service.py  test_doctor_availability.py  test_doctor_languages.py  test_field_encryption.py  test_intake_json_storage.py  test_integrations_platform.py  test_operations_scope.py  test_order_workflow.py  test_profile.py  test_slot_availability.py  test_sql_safety.py  test_staff_archive.py  test_staff_doctors.py  test_staff_super_admins.py  test_storage_s3_keys.py  test_websocket_notifications.py
(+1127 files in other folders)
